--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "cowsay": "^1.6.0",
     "framer-motion": "^7.6.19",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
